Adds base font.

--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -1,5 +1,6 @@
 /* ---------------------------------------------------------------------
  Modern Styles
 ------------------------------------------------------------------------ */
+@import "_config";
 @import "base/_reset";
 @import "base/_elements";
