--- a/src/assets/styles/base/_elements.css
+++ b/src/assets/styles/base/_elements.css
@@ -1,3 +1,8 @@
 /* ---------------------------------------------------------------------
  Elements Styles
 ------------------------------------------------------------------------ */
+
+body {
+  font-family: var(--font-family);
+  font-size: var(--base-font-size);
+}
