--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -42,6 +42,7 @@
     <meta name="msapplication-TileColor" content="#ff0000">
 
     {{#block "styles"}}
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
         <link rel="stylesheet" media="screen, projection" href="assets/styles/modern.css?v={{version}}" />
     {{/block}}
 </head>
