Adds container styles.

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,5 +1,7 @@
 {{#extend "layout"}}
     {{#content "body" mode="append" }}
-        <div id="js-app">Loading...</div>
+        <div class="container">
+          <div class="container-inner" id="js-app">Loading...</div>
+        </div>
     {{/content}}
 {{/extend}}
