Stubbing out how numbers are displayed, interacted with, and evaluated.

--- a/src/assets/styles/base/_elements.css
+++ b/src/assets/styles/base/_elements.css
@@ -2,7 +2,8 @@
  Elements Styles
 ------------------------------------------------------------------------ */
 
-body {
+body,
+button {
   font-family: var(--font-family);
   font-size: var(--base-font-size);
 }
