Adds gulp task to svgmin, svgstore, and svg inject.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -48,8 +48,11 @@
 </head>
 
 <body>
+    <div class="visually-hidden">
+        <!-- inject:svg --><!-- endinject -->
+    </div>
     {{#block "body"}}
-	{{/block}}
+    {{/block}}
 
     <script>
         window.GLOBAL = {
