--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -7,3 +7,19 @@
 
 /* Layout */
 @import "layout/_container";
+
+/* TODO: Organize this
+/* http://a11yproject.com/posts/how-to-hide-content/ */
+.visually-hidden {
+    position: absolute !important;
+    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px, 1px, 1px, 1px);
+    padding:0 !important;
+    border:0 !important;
+    height: 1px !important;
+    width: 1px !important;
+    overflow: hidden;
+}
+body:hover .visually-hidden a,
+body:hover .visually-hidden input,
+body:hover .visually-hidden button { display: none !important; }
