Adds an atmosphere.

--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -5,6 +5,9 @@
 @import "base/_reset";
 @import "base/_elements";
 
+/* Landmarks */
+@import "landmarks/_atmosphere";
+
 /* Layout */
 @import "layout/_container";
 
