--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -42,7 +42,7 @@
     <meta name="msapplication-TileColor" content="#ff0000">
 
     {{#block "styles"}}
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" />
         <link rel="stylesheet" media="screen, projection" href="assets/styles/modern.css?v={{version}}" />
     {{/block}}
 </head>
