--- a/src/assets/styles/_config.css
+++ b/src/assets/styles/_config.css
@@ -2,9 +2,19 @@
 :root {
   --base-font-size: 16px;
   --font-family: 'Source Sans Pro', sans-serif;
+
   --color-primary: #4A7CB2;
-  --color-secondary: #35587C;
+  --color-secondary: rgba(0, 0, 0, 0.33);
   --color-accent: #FF8076;
   --color-neutral-15: #EEEEEE;
   --color-neutral-16: #FFFFFF;
+
+  --space-1x: 2px;
+  --space-2x: 4px;
+  --space-3x: 8px;
+  --space-4x: 16px;
+  --space-5x: 32px;
+
+  --weight-normal: 400;
+  --weight-semibold: 600;
 }
