Adds a (not dynamic) gauge.

--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -9,6 +9,7 @@
 @import "layout/_container";
 
 /* Components */
+@import "components/_gauge";
 @import "components/_masthead";
 @import "components/_typ";
 
