--- a/src/assets/styles/_config.css
+++ b/src/assets/styles/_config.css
@@ -4,10 +4,16 @@
   --font-family: 'Source Sans Pro', sans-serif;
 
   --color-primary: #4A7CB2;
-  --color-secondary: rgba(0, 0, 0, 0.33);
+  --color-secondary: #2E4F6D;
   --color-accent: #FF8076;
-  --color-neutral-15: #EEEEEE;
-  --color-neutral-16: #FFFFFF;
+  --color-ghost: rgba(0, 0, 0, 0.33);
+  --color-neutral-12-16: #BBBBBB;
+  --color-neutral-13-16: #CCCCCC;
+  --color-neutral-14-16: #DDDDDD;
+  --color-neutral-15-16: #EEEEEE;
+  --color-neutral-16-16: #FFFFFF;
+
+  --shadow-normal: 0 2px 10px rgba(0, 0, 0, 0.33);
 
   --space-1x: 2px;
   --space-2x: 4px;
