Stubs out styling for the main, "target" area.

--- a/src/assets/styles/_config.css
+++ b/src/assets/styles/_config.css
@@ -13,7 +13,8 @@
   --color-neutral-15-16: #EEEEEE;
   --color-neutral-16-16: #FFFFFF;
 
-  --shadow-normal: 0 2px 10px rgba(0, 0, 0, 0.33);
+  --shadow-normal: 0 2px 10px var(--color-ghost);
+  --shadow-thin: 2px 2px 0 var(--color-ghost);
 
   --space-1x: 2px;
   --space-2x: 4px;
