--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -10,6 +10,7 @@
 
 /* Components */
 @import "components/_gauge";
+@import "components/_main";
 @import "components/_masthead";
 @import "components/_typ";
 
