Gets rid of the scrollbar and max-width.

--- a/src/assets/styles/base/_elements.css
+++ b/src/assets/styles/base/_elements.css
@@ -2,6 +2,10 @@
  Elements Styles
 ------------------------------------------------------------------------ */
 
+html {
+  overflow: auto;
+}
+
 body,
 button {
   font-family: var(--font-family);
