Adds some bubbles at the bottom which will control undo/refresh/give-up.

--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -7,8 +7,10 @@
 
 /* Layout */
 @import "layout/_container";
+@import "layout/_hList";
 
 /* Components */
+@import "components/_bubble";
 @import "components/_gauge";
 @import "components/_main";
 @import "components/_masthead";
