Adds undo, refresh, and skip icons. Wires up their buttons to their respective event handlers.

--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -14,6 +14,7 @@
 @import "components/_gauge";
 @import "components/_main";
 @import "components/_masthead";
+@import "components/_svg";
 @import "components/_typ";
 
 /* TODO: Organize this
