--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -8,6 +8,7 @@
 /* Layout */
 @import "layout/_container";
 @import "layout/_hList";
+@import "layout/_vList";
 
 /* Components */
 @import "components/_bubble";
