--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -16,6 +16,7 @@
 @import "components/_main";
 @import "components/_masthead";
 @import "components/_svg";
+@import "components/_tile";
 @import "components/_typ";
 
 /* TODO: Organize this
