Adds operator icons.

--- a/src/assets/styles/components/_svg.css
+++ b/src/assets/styles/components/_svg.css
@@ -3,8 +3,10 @@
   display: inline-block;
   width: 24px;
   height: 24px;
+  fill: currentColor;
 }
 
+.svg--smaller { width: 18px; height: 18px; }
 .svg--bigger { width: 36px; height: 36px; }
 
 .svg--lightest { fill: var(--color-neutral-16-16); }
