--- a/src/assets/styles/_config.css
+++ b/src/assets/styles/_config.css
@@ -7,6 +7,7 @@
   --color-secondary: #2E4F6D;
   --color-accent: #FF8076;
   --color-ghost: rgba(0, 0, 0, 0.33);
+  --color-neutral-11-16: #AAAAAA;
   --color-neutral-12-16: #BBBBBB;
   --color-neutral-13-16: #CCCCCC;
   --color-neutral-14-16: #DDDDDD;
