--- a/src/assets/styles/components/_bubble.css
+++ b/src/assets/styles/components/_bubble.css
@@ -12,4 +12,11 @@
   box-shadow: var(--shadow-normal);
   width: 64px;
   height: 64px;
+
+  transition: transform 200ms ease-out, opacity 200ms ease-out;
+}
+
+.bubble:disabled {
+  opacity: 0.7;
+  transform: scale(0.9);
 }
