--- a/src/assets/styles/_config.css
+++ b/src/assets/styles/_config.css
@@ -4,7 +4,7 @@
   --font-family: 'Source Sans Pro', sans-serif;
 
   --color-primary: #4A7CB2;
-  --color-secondary: #2E4F6D;
+  --color-secondary: rgba(0, 0, 0, 0.4);
   --color-accent: #FF8076;
   --color-ghost: rgba(0, 0, 0, 0.33);
   --color-neutral-11-16: #AAAAAA;
