Stubs out success state.

--- a/src/assets/styles/_config.css
+++ b/src/assets/styles/_config.css
@@ -6,6 +6,7 @@
   --color-primary: #4A7CB2;
   --color-secondary: rgba(0, 0, 0, 0.4);
   --color-accent: #FF8076;
+  --color-success: #5AC36C;
   --color-ghost: rgba(0, 0, 0, 0.33);
   --color-neutral-11-16: #AAAAAA;
   --color-neutral-12-16: #BBBBBB;
