--- a/src/assets/styles/modern.css
+++ b/src/assets/styles/modern.css
@@ -15,6 +15,7 @@
 @import "components/_gauge";
 @import "components/_main";
 @import "components/_masthead";
+@import "components/_success";
 @import "components/_svg";
 @import "components/_tile";
 @import "components/_typ";
