--- a/src/index.hbs
+++ b/src/index.hbs
@@ -2,6 +2,7 @@
     {{#content "body" mode="append" }}
         <div class="container">
           <div class="container-inner" id="js-app">Loading...</div>
+          <div class="container-ad"></div>
         </div>
     {{/content}}
 {{/extend}}
