--- a/src/assets/styles/base/_elements.css
+++ b/src/assets/styles/base/_elements.css
@@ -3,6 +3,7 @@
 ------------------------------------------------------------------------ */
 
 html {
+  background: var(--color-neutral-15-16);
   overflow: auto;
 }
 
