--- a/src/assets/styles/components/_main.css
+++ b/src/assets/styles/components/_main.css
@@ -1,7 +1,6 @@
 
 .main {
   position: absolute;
-  overflow: hidden;
   height: 30%;
   width: 100%;
 }
@@ -28,6 +27,15 @@
 }
 
 .main--collapsed .main__content {
-  transform: translateY(100%);
+  transform: translate3d(-50%, 100%, 0);
   opacity: 0;
+}
+
+.main__content {
+  font-size: calc((100vh - var(--ad-height)) * 0.25);
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
 }
