Fixes issue where scrolling, short viewports would shrink the target number (because it used vh units).

--- a/src/assets/styles/_config.css
+++ b/src/assets/styles/_config.css
@@ -1,6 +1,7 @@
 
 :root {
   --ad-height: 50px;
+  --min-height: 568px;
 
   --base-font-size: 16px;
   --font-family: 'Source Sans Pro', sans-serif;
