--- a/src/assets/styles/components/_button.css
+++ b/src/assets/styles/components/_button.css
@@ -13,3 +13,10 @@
   background: none;
   color: var(--color-accent);
 }
+
+.button-no-style {
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
+}
