--- a/src/assets/styles/components/_masthead.css
+++ b/src/assets/styles/components/_masthead.css
@@ -3,8 +3,10 @@
   background: var(--color-primary);
   position: relative;
   z-index: 10;
+  display: flex;
 }
 
-.masthead__branding {
-  padding: var(--space-4x) var(--space-3x) var(--space-3x);
+.masthead__branding,
+.masthead__info {
+  padding: var(--space-4x) 0 var(--space-3x) var(--space-3x);
 }
