--- a/src/assets/styles/components/_button.css
+++ b/src/assets/styles/components/_button.css
@@ -7,6 +7,8 @@
   margin: 0;
   padding: 8px 16px;
   font-weight: bold;
+  box-shadow: none;
+  transition: box-shadow 200ms ease-out;
 }
 
 .button--invert {
@@ -19,4 +21,8 @@
   border: none;
   margin: 0;
   padding: 0;
+}
+
+.button:focus {
+  box-shadow: var(--shadow-normal);
 }
