--- a/src/assets/styles/components/_modal.css
+++ b/src/assets/styles/components/_modal.css
@@ -9,7 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 10;
+  z-index: 20;
 }
 
 .modal__dialog {
@@ -19,6 +19,9 @@
   width: 300px;
   text-align: left;
   padding: var(--space-4x);
+  max-height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
 }
 
 .modal__footer {
