Adds title, favicon, manifest.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -7,7 +7,7 @@
 -->
 <html class="no-js" lang="en-us">
 <head>
-    <title>CLIENT.Project</title>
+    <title>numbario - Math Puzzle Game</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
@@ -15,31 +15,10 @@
     <!--[if IE]><meta http-equiv="cleartype" content="on" /><![endif]-->
 
     <!-- Touch Icons - iOS and Android -->
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/media/images/apple-touch-icon-57x57.png?={{version}}" />
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/media/images/apple-touch-icon-60x60.png?={{version}}" />
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/media/images/apple-touch-icon-72x72.png?v={{version}}" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/media/images/apple-touch-icon-76x76.png?v={{version}}" />
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/media/images/apple-touch-icon-114x114.png?v={{version}}" />
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/media/images/apple-touch-icon-120x120.png?v={{version}}" />
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/media/images/apple-touch-icon-144x144.png?v={{version}}" />
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/media/images/apple-touch-icon-152x152.png?v={{version}}" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/media/images/apple-touch-icon-180x180.png?v={{version}}" />
-    <link rel="apple-touch-icon" sizes="196x196" href="assets/media/images/apple-touch-icon-196x196.png?v={{version}}" />
-
-    <!-- For IE 9 and below. ICO should be 32x32 pixels in size generated from http://www.xiconeditor.com/ or might not work  -->
-    <!--[if lte IE 9]><link rel="shortcut icon" href="assets/media/images/favicon-32x32.ico?v={{version}}" type="image/x-icon" ><![endif]-->
+    <link rel="apple-touch-icon" sizes="128x128" href="favicon.ico?v={{version}}" />
 
     <!-- All other browsers -->
-    <link rel="icon" type="image/png" sizes="196x196" href="assets/media/images/favicon-196x196.png?v={{version}}" />
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/media/images/favicon-192x192.png?v={{version}}" />
-    <link rel="icon" type="image/png" sizes="160x160" href="assets/media/images/favicon-160x160.png?v={{version}}" />
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/media/images/favicon-96x96.png?v={{version}}" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/media/images/favicon-32x32.png?v={{version}}" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/media/images/favicon-16x16.png?v={{version}}" />
-
-    <!-- IE 11+ on Windows 8.1+ -->
-    <meta name="msapplication-TileImage" content="assets/media/images/mstile-144x144.png?v={{version}}">
-    <meta name="msapplication-TileColor" content="#ff0000">
+    <link rel="icon" type="image/x-icon" sizes="128x128" href="favicon.ico?v={{version}}" />
 
     {{#block "styles"}}
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" />
