Adds google adsense tracking code.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -24,6 +24,16 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" />
         <link rel="stylesheet" media="screen, projection" href="assets/styles/modern.css?v={{version}}" />
     {{/block}}
+
+    {{#if GOOGLE_AD_CLIENT}}
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "{{GOOGLE_AD_CLIENT}}",
+            enable_page_level_ads: true
+        });
+        </script>
+    {{/if}}
 </head>
 
 <body>
