Updates favicon to satisfy A2HS requirements.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -15,10 +15,10 @@
     <!--[if IE]><meta http-equiv="cleartype" content="on" /><![endif]-->
 
     <!-- Touch Icons - iOS and Android -->
-    <link rel="apple-touch-icon" sizes="128x128" href="favicon.ico?v={{version}}" />
+    <link rel="apple-touch-icon" sizes="192x192" href="favicon.png?v={{version}}" />
 
     <!-- All other browsers -->
-    <link rel="icon" type="image/x-icon" sizes="128x128" href="favicon.ico?v={{version}}" />
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon.png?v={{version}}" />
 
     {{#block "styles"}}
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" />
