Links manifest file.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -14,6 +14,8 @@
     <meta name="author" content="" />
     <!--[if IE]><meta http-equiv="cleartype" content="on" /><![endif]-->
 
+    <link rel="manifest" href="manifest.json">
+
     <!-- Touch Icons - iOS and Android -->
     <link rel="apple-touch-icon" sizes="192x192" href="favicon.png?v={{version}}" />
 
