Adds meta description.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -10,7 +10,7 @@
     <title>numbario - Math Puzzle Game</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
+    <meta name="description" content="numbario is a game about combining numbers to make another number. There's no time limit or ultimate goal. Just relax, have fun, and enjoy solving one puzzle after another." />
     <meta name="author" content="" />
     <!--[if IE]><meta http-equiv="cleartype" content="on" /><![endif]-->
 
