Adds open graph tags.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -14,6 +14,14 @@
     <meta name="author" content="" />
     <!--[if IE]><meta http-equiv="cleartype" content="on" /><![endif]-->
 
+    <!-- Open Graph -->
+    <meta property="og:url"         content="https://numbario.com" />
+    <meta property="og:type"        content="game" />
+    <meta property="og:title"       content="numbario" />
+    <meta property="og:description" content="numbario is a game about combining numbers to make another number. There's no time limit or ultimate goal. Just relax, have fun, and enjoy solving one puzzle after another." />
+    <meta property="og:image"       content="https://numbario.com/favicon.png" />
+
+
     <link rel="manifest" href="manifest.json">
 
     <!-- Touch Icons - iOS and Android -->
