Adds bigger image to satisfy open graph and manifest.json requirements.

--- a/src/templates/layout.hbs
+++ b/src/templates/layout.hbs
@@ -19,9 +19,9 @@
     <meta property="og:type" content="game" />
     <meta property="og:title" content="numbario - Math Puzzle Game" />
     <meta property="og:description" content="numbario is a game about combining numbers to make another number. There's no time limit or ultimate goal. Just relax, have fun, and enjoy solving one puzzle after another." />
-    <meta property="og:image:width" content="192" />
-    <meta property="og:image:height" content="192" />
-    <meta property="og:image" content="https://numbario.com/favicon.png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:image" content="https://numbario.com/favicon-512.png" />
 
     <link rel="manifest" href="manifest.json">
 
